[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://Weapon/Weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Shield/Shield.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerHitBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Weapon_Rotation" type="Position2D" parent="."]

[node name="Weapon" parent="Weapon_Rotation" instance=ExtResource( 3 )]
position = Vector2( 73, 0 )

[node name="Shield" parent="Weapon_Rotation" instance=ExtResource( 4 )]
visible = false
position = Vector2( 73, 0 )

[node name="ViewPoint" type="Camera2D" parent="."]
current = true

[node name="UI" type="Control" parent="ViewPoint"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpBar" type="ProgressBar" parent="ViewPoint/UI"]
self_modulate = Color( 0.266667, 1, 0, 1 )
margin_left = -491.0
margin_top = -285.0
margin_right = -221.0
margin_bottom = -271.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MPBar" type="ProgressBar" parent="ViewPoint/UI"]
self_modulate = Color( 0, 1, 1, 1 )
margin_left = -491.0
margin_top = -267.0
margin_right = -221.0
margin_bottom = -253.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApBar" type="ProgressBar" parent="ViewPoint/UI"]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = -490.0
margin_top = -250.0
margin_right = -220.0
margin_bottom = -236.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="shot_cost" from="Weapon_Rotation/Weapon" to="." method="_on_Weapon_shot_cost"]
